# amcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  test_telegram_integration.py
.agent/workflows/: skills-and-commands.md
.amcp/memory/: HISTORY.md  MEMORY.md
.amcp/skills/baseten-deployer/: DEPLOYMENT_SUMMARY.md  README.md  SKILL.md  config.toml
.amcp/skills/baseten-deployer/examples/: sample_model.py  simple_classifier.pkl  test_data.json
.amcp/skills/baseten-deployer/scripts/: create_simple_model.py  deploy_demo.py  deploy_model.py  deployments.json  simple_deploy.py  test_deployment.py
.amcp/skills/gh-ci-analyzer/: SKILL.md
.amcp/skills/gh-ci-analyzer/references/: common-failure-patterns.md  gh-cli-cheatsheet.md
.amcp/skills/gh-ci-analyzer/scripts/: analyze-failed-run.sh  batch-analyze.sh  generate-report.sh
.amcp/skills/gh-pr-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-image.yml  release.yml
.kiro/specs/ctrl-d-quit/: design.md  requirements.md  tasks.md
deploy/: amcp.service  docker-compose.yml
deploy-gmi/: Dockerfile  README.md  agentbox-registration.json  gmi-entrypoint.sh
docs/: PROJECT_STRUCTURE.md  QUICK_START.md  apply-patch.md  hooks.md  permissions.md  phase10-anchor.md  phase10-telegram-first-assistant.md  phase2-agent-capabilities.md  phase3-extensibility.md  phase4-smart-compaction.md  phase5-dynamic-model-database.md  phase6-agents-md-support.md  phase7-telegram-integration.md  phase8-heartbeat-cron.md  phase9-progressive-view.md  prompts.md  skills-and-commands.md
docs/api/: README.md  protocol-compatibility.md
docs/architecture/: client-server.md
examples/: README.md
examples/agents/: data-scientist.yaml  devops-engineer.yaml  documentation-writer.yaml  security-auditor.yaml  web-developer.yaml
examples/commands/: debug.toml  explain.toml  migrate.toml  optimize.toml  refactor.toml  review.toml  test.toml
examples/commands/database/: query.toml
examples/commands/docker/: build.toml
examples/commands/git/: commit.toml  log.toml
examples/commands/security/: audit.toml
examples/hooks/: automated-testing.toml  check_code_quality.sh  hooks.toml  log_tool_calls.py  security-validation.toml  validate_file_writes.py
examples/hooks/scripts/: check_code_quality.sh  log_tool_calls.py  scan_secrets.py
examples/plugins/: README.md
examples/plugins/code-review/: README.md  plugin.json
examples/plugins/code-review/agents/: bug-detector.yaml  security-checker.yaml  style-checker.yaml
examples/plugins/code-review/commands/: code-review.md
examples/plugins/feature-dev/: README.md  plugin.json
examples/plugins/feature-dev/agents/: code-architect.yaml  code-explorer.yaml  code-reviewer.yaml
examples/plugins/feature-dev/commands/: feature-dev.md
examples/plugins/security-guidance/: README.md  plugin.json
examples/plugins/security-guidance/hooks/: block-dangerous-commands.md  warn-credential-exposure.md  warn-security-antipatterns.md  warn-sensitive-files.md
examples/skills/ai-engineer/: SKILL.md
examples/skills/code-review/: SKILL.md
examples/skills/mobile-developer/: SKILL.md
examples/skills/python-expert/: SKILL.md
examples/skills/react-developer/: SKILL.md
examples/workflows/: data-science-workflow.md  devops-security-workflow.md  web-development-workflow.md
scripts/: e2e_serve_skill_selftest.py  generate_types.py
skills/context-management/: SKILL.md
src/amcp/: __init__.py  __main__.py  _version.py  acp_agent.py  agent.py  agent_spec.py  apply_patch.py  chat.py  cli.py  commands.py  compaction.py  config.py  event_bus.py  hooks.py  init_wizard.py  interaction.py  llm.py  mcp_client.py  memory.py  memory_dream.py  memory_review.py  memory_store.py  message_queue.py  models_db.py  multi_agent.py  permissions.py  project_rules.py  readfile.py  session_search.py  skills.py  task.py  toad.py  tools.py  ui.py
src/amcp/builtin_skills/: __init__.py
src/amcp/client/: __init__.py  base.py  embedded.py  exceptions.py  http_client.py  session.py  ws_client.py
src/amcp/daemon/: __init__.py  config.py  daemon.py  heartbeat.py  reactor.py  scheduler.py  task_runner.py
src/amcp/progressive/: __init__.py  context_budget.py  relevance.py  skill_view.py  tool_view.py  usage_tracker.py
src/amcp/prompts/: __init__.py  manager.py
src/amcp/protocol/: __init__.py  adapter.py  converters.py  error_codes.py
src/amcp/server/: __init__.py  app.py  config.py  event_bridge.py  events.py  interaction.py  models.py  session_manager.py  websocket.py
src/amcp/telegram/: __init__.py  auth.py  bot.py  client.py  config.py  formatter.py  handlers.py  scheduler.py  tools.py
tests/: conftest.py  test_acp.py  test_agent.py  test_agent_progressive.py  test_agent_spec.py  test_apply_patch.py  test_assistant_scheduler.py  test_chat.py  test_client.py  test_commands.py  test_compaction.py  test_config.py  test_daemon.py  test_event_bus.py  test_hooks.py  test_init_wizard.py  test_interaction.py  test_llm.py  test_memory.py  test_memory_dream.py  test_memory_review.py  test_memory_sqlite.py  test_message_queue.py  test_models_db.py  test_multi_agent.py  test_permissions.py  test_progressive.py  test_project_rules.py  test_prompts.py  test_protocol.py  test_readfile.py  test_server.py  test_session_search.py  test_skill_creator.py  test_skills.py  test_task.py  test_telegram.py  test_telegram_prompt_scheduler.py  test_telegram_send_tool.py  test_telegram_sender_skill_script.py  (+2 more)
(+26 files in other folders)
