[project]
name = "amcp-agent"
version = "0.11.0"
description = "AMCP is an out-of-the-box coding-agent runtime for terminal, IDE, server, and Telegram, with built-in tools, subagents, skills, memory, MCP/ACP, hooks, and automation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "tao" }
]
license = { text = "Apache-2.0" }
keywords = [
  "agent-client-protocol",
  "ai",
  "automation",
  "cli",
  "coding-agent",
  "developer-tools",
  "llm",
  "mcp",
  "multi-agent",
  "skills",
  "telegram",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.0",
  "pydantic>=2.7",
  "fastmcp>=2.0.0,<3",
  "tomli-w>=1.0.0",
  "openai>=1.52.0",
  "pyyaml>=6.0",
  "prompt-toolkit>=3.0.0",
  "agent-client-protocol>=0.7.0",
  # Server dependencies
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
telegram = [
  "python-telegram-bot>=21.0",
  "requests>=2.31.0",
  "telegramify-markdown>=1.0.0,<2",
  "croniter>=1.3.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "types-PyYAML>=6.0.0",
  "anthropic>=0.40.0",
  "telegramify-markdown>=1.0.0,<2",
]

[project.scripts]
amcp = "amcp.cli:app"
amcp-agent = "amcp.cli:app"

[project.urls]
Homepage = "https://github.com/tao12345666333/amcp"
Repository = "https://github.com/tao12345666333/amcp"
Issues = "https://github.com/tao12345666333/amcp/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amcp"]

[tool.hatch.build.targets.sdist]
include = ["src/amcp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/amcp --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
